@@ -23,6 +23,11 @@ old-style "standard" after instantiation or composition of facts
 becomes obsolete.  Minor INCOMPATIBILITY, due to potential change of
 indices of schematic variables.
 
+* Renamed inner syntax categories "num" to "num_token" and "xnum" to
+"xnum_token", in accordance to existing "float_token".  Minor
+INCOMPATIBILITY.  Note that in practice "num_const" etc. are mainly
+used instead.
+
 
 *** Pure ***
 
